deployfolder/objects/Project__c.object
<CustomObject>
    <description>Used to track the different projects for the instance.</description>
    <label>Project</label>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Actual_End_Date__c</fullName>
        <label>Actual End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Start_Date__c</fullName>
        <label>Actual Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Till_Launch__c</fullName>
        <formula>CASE(MOD( Actual_End_Date__c - DATE(1985,6,24),7), 
0 , CASE( MOD( Actual_End_Date__c - Actual_Start_Date__c ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
1 , CASE( MOD( Actual_End_Date__c - Actual_Start_Date__c ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
2 , CASE( MOD( Actual_End_Date__c - Actual_Start_Date__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
3 , CASE( MOD( Actual_End_Date__c - Actual_Start_Date__c ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
4 , CASE( MOD( Actual_End_Date__c - Actual_Start_Date__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
5 , CASE( MOD( Actual_End_Date__c - Actual_Start_Date__c ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
6 , CASE( MOD( Actual_End_Date__c - Actual_Start_Date__c ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
999) 
+ 
(FLOOR(( Actual_End_Date__c - Actual_Start_Date__c )/7)*5)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of Business Days remaining until Go Live!</inlineHelpText>
        <label>Days Till Launch</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Planned_End_Date__c</fullName>
        <label>Planned End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Planned_Start_End__c</fullName>
        <label>Planned Start End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Summary__c</fullName>
        <label>Project Summary</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Planning</fullName>
                </value>
                <value>
                    <fullName>Requirements</fullName>
                </value>
                <value>
                    <fullName>Development</fullName>
                </value>
                <value>
                    <fullName>UAT</fullName>
                </value>
                <value>
                    <fullName>Deployment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Requested</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>